[package]
name = "cornerstore"
version = "0.1.0"
edition = "2018"

# https://doc.rust-lang.org/edition-guide/rust-2018/platform-and-target-support/cdylib-crates-for-c-interoperability.html
[lib]
name = "cornerstore"
crate-type   = ["cdylib"] 

[profile.release]
lto = "fat"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
jemallocator = "0.3"