[package]
name = "cornerstore"
authors = [ "Tim McNamara <code@timmcnamara.co.nz>" ]
description = "An in-memory key/value store for read-heavy workloads with expireable items."
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENCE"
keywords = [ "cache", "concurrency" ]
categories = [ "caching" ]
repository = "https://github.com/timClicks/cornerstore"

# https://doc.rust-lang.org/edition-guide/rust-2018/platform-and-target-support/cdylib-crates-for-c-interoperability.html
[lib]
name = "cornerstore"
crate-type   = ["cdylib"] 

[profile.release]
lto = "fat"
codegen-units = 1

[features]
# uses a fast hashing algorithm
safe-input = [ "fxhash" ]

[dependencies]
libc = "0.2"
jemallocator = "0.3"
fxhash = { version = "0.2", optional = true }

[dev-dependencies]
bustle = "0.4.2"
tracing-subscriber = "0.2"
num_cpus = "1"

# [[bench]]
# name = "arc_mutex_std"
# harness = false

# [[bench]]
# name = "arc_rwlock_std"
# harness = false